--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+// Layout
+$mobile-width: 375px;
+$desktop-width: 1440px;
+
+// Colors
+$very-dark-gray: hsl(0, 0%, 17%);
+$dark-gray: hsl(0, 0%, 59%);
+
+// Typography
+// Body Copy
+$text-input-font-size: 18px;
+
+// Font
+$font-rubik: "Rubik", sans-serif;
+$font-weight-normal: 400;
+$font-weight-medium: 500;
+$font-weight-bold: 700;
+
+body{
+  font-family: $font-rubik;
+}
